# toxictide

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  default_config.yaml  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  start_toxictide.bat  test_binance_simple.py  test_stop_loss.py
examples/: demo.py  demo_anomaly.py  demo_diagnostic.py  demo_simple.py  main_quiet.py  main_realdata.py
learn/: learn_step1.py  learn_step2.py  learn_step3.py  learn_step4.py  learn_step5.py
toxictide/: app.py  bus.py  config_loader.py  exceptions.py  models.py  state.py
toxictide/config/: test.yaml
toxictide/detectors/: __init__.py  oad.py  stress.py  vad.py
toxictide/execution/: adapter_base.py  adapter_binance.py  adapter_paper.py  planner.py
toxictide/explain/: explain.py
toxictide/features/: feature_engine.py  impact.py
toxictide/ledger/: ledger.py
toxictide/market/: collector.py  collector_real.py  orderbook.py  tape.py
toxictide/position/: __init__.py  manager.py  monitor.py
toxictide/regime/: __init__.py  regime.py
toxictide/risk/: __init__.py  guardian.py  reason_codes.py  tilt.py
toxictide/strategy/: __init__.py  signals.py
toxictide/tests/: test_init.py
toxictide/tests/integration/: test_e2e.py
toxictide/tests/unit/: test_bus.py  test_config.py  test_exceptions.py  test_models.py
toxictide/tests/unit/detectors/: test_oad.py  test_stress.py  test_vad.py
toxictide/tests/unit/execution/: test_adapter_paper.py  test_planner.py
toxictide/tests/unit/explain/: test_explain.py
toxictide/tests/unit/features/: test_feature_engine.py  test_impact.py
toxictide/ui/: cli.py  web.py
toxictide/ui/templates/: dashboard.html
toxictide/utils/: math.py  rolling.py
(+11 files in other folders)
