[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "toxictide"
version = "0.1.0"
authors = [
  { name="Toxictide Team", email="team@toxictide.ai" },
]
description = "A powerful trading bot"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.1.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "aiohttp>=3.8.0",
    "websockets>=11.0",
    "python-binance>=1.0.17",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]

[tool.setuptools.packages.find]
include = ["toxictide*"]
exclude = ["learn*", "logs*", "tests*"]

# 测试配置
[tool.pytest.ini_options]
testpaths = ["toxictide/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

# 代码格式化
[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  __pycache__
  | \.git
  | \.venv
  | build
  | dist
)/
'''

# Import 排序
[tool.isort]
profile = "black"
line_length = 88
skip = [".venv", "__pycache__"]

# Linting
[tool.ruff]
line-length = 88
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
]

# 类型检查
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
